Update DrawingFileController, DrawingController, DrawingVM, ProjectVM Add DrawingFiles Views Update site.js

--- a/DrawingRegisterWeb/DrawingRegisterWeb.csproj
+++ b/DrawingRegisterWeb/DrawingRegisterWeb.csproj
@@ -20,6 +20,7 @@
     <Folder Include="wwwroot\Files\Drawings\" />
     <Folder Include="wwwroot\Files\Documentation\" />
     <Folder Include="wwwroot\Files\Layouts\" />
+    <Folder Include="wwwroot\Files\Images\" />
   </ItemGroup>
 
 </Project>
