--- a/DrawingRegisterWeb/DrawingRegisterWeb.csproj
+++ b/DrawingRegisterWeb/DrawingRegisterWeb.csproj
@@ -21,6 +21,7 @@
     <Folder Include="wwwroot\Files\Documentation\" />
     <Folder Include="wwwroot\Files\Layouts\" />
     <Folder Include="wwwroot\Files\Images\" />
+    <Folder Include="wwwroot\Files\SeededData\" />
   </ItemGroup>
 
 </Project>
