Integrated 3D model in projects Updated Index View

--- a/DrawingRegisterWeb/DrawingRegisterWeb.csproj
+++ b/DrawingRegisterWeb/DrawingRegisterWeb.csproj
@@ -22,7 +22,7 @@
     <Folder Include="wwwroot\Files\Documentation\" />
     <Folder Include="wwwroot\Files\Layouts\" />
     <Folder Include="wwwroot\Files\Images\" />
-    <Folder Include="wwwroot\Files\SeededData\" />
+    <Folder Include="wwwroot\Files\3DModels\" />
   </ItemGroup>
 
 </Project>
