--- a/DrawingRegisterWeb/DrawingRegisterWeb.csproj
+++ b/DrawingRegisterWeb/DrawingRegisterWeb.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\Files\3DModels\**" />
+    <Content Remove="wwwroot\Files\3DModels\**" />
+    <EmbeddedResource Remove="wwwroot\Files\3DModels\**" />
+    <None Remove="wwwroot\Files\3DModels\**" />
+  </ItemGroup>
+
+  <ItemGroup>
 	<PackageReference Include="Aspose.PDF" Version="22.12.0" />
 	<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
 	<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.12" />
@@ -25,7 +32,6 @@
 	<Folder Include="wwwroot\Files\Documentation\" />
 	<Folder Include="wwwroot\Files\Layouts\" />
 	<Folder Include="wwwroot\Files\Images\" />
-	<Folder Include="wwwroot\Files\3DModels\" />
   </ItemGroup>
 
 </Project>
