--- a/DrawingRegisterWeb/DrawingRegisterWeb.csproj
+++ b/DrawingRegisterWeb/DrawingRegisterWeb.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
 	<PackageReference Include="Aspose.PDF" Version="22.12.0" />
+	<PackageReference Include="MailKit" Version="3.5.0" />
 	<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
 	<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.12" />
 	<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.12" />
@@ -25,6 +26,7 @@
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
 	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.11" />
+	<PackageReference Include="MimeKit" Version="3.5.0" />
   </ItemGroup>
 
   <ItemGroup>
